# Amana

./: .env.staging.example  .gitignore  .gitleaks.toml  DEPLOYMENT_FIX_CHANGES.md  DEPLOYMENT_FIX_SUMMARY.md  FRONTEND_REFACTORING_ISSUES.md  README.md  SMART_CONTRACT_ISSUES.md  TESTING.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  pr.md
contracts/amana_escrow/: .gitattributes  Cargo.toml  README.md  build_out.txt  write_test.ps1
contracts/amana_escrow/src/: lib.rs
contracts/amana_escrow/test_snapshots/: test_auth_add_mediator_admin_allowed.1.json  test_auth_add_mediator_stranger_denied.1.json  test_auth_cancel_trade_admin_allowed_created.1.json  test_auth_cancel_trade_admin_allowed_funded.1.json  test_auth_cancel_trade_buyer_allowed_created.1.json  test_auth_cancel_trade_seller_allowed_created.1.json  test_auth_cancel_trade_stranger_denied_created.1.json  test_auth_confirm_delivery_buyer_allowed.1.json  test_auth_confirm_delivery_seller_denied.1.json  test_auth_confirm_delivery_stranger_denied.1.json  test_auth_create_trade_rejects_self_trade.1.json  test_auth_deposit_seller_denied.1.json  test_auth_initiate_dispute_buyer_allowed.1.json  test_auth_initiate_dispute_seller_allowed.1.json  test_auth_initiate_dispute_stranger_denied.1.json  test_auth_release_funds_buyer_allowed.1.json  test_auth_release_funds_seller_denied.1.json  test_auth_release_funds_stranger_denied.1.json  test_auth_remove_mediator_admin_allowed.1.json  test_auth_remove_mediator_stranger_denied.1.json  test_auth_resolve_dispute_buyer_denied.1.json  test_auth_set_mediator_admin_allowed.1.json  (+338 more)
(+543 files in other folders)
